CHANGES IN VERSION 1.4.0
------------------------

MODIFICATIONS

    o Moved vignette to ExperimentHub as more practical use there; created new
    vignette

BUG FIXES

    o updated addResources

VERSION 1.0.0
------------------------

Package added to release BioC 3.4